1.6600: Sun Jun 28 2009
   - new test: create each object in its empty state, make sure
     its really empty.

1.6600: Sat Jun 27 2009
   - worked on computed vectors a little.  decided it should be
     possible to insert into them, instead inserting into the
     input_vector.
   - finished a lot more 1.66 docs
   - since two vectors remain separate objects under
     $v1->set_vector($v2), they shouldn't be linked together from
     that -- set_vector now copies instead of linking.
     computed() vectors can serve that role instead.
   - made sure all the object accessors return the object
   - made set_vector() take nonscalars like all the export
     constructors
   - made the export constructors use the new set_vector() via
     new()
   - made all the objects true in bool context

1.6600: Wed Jun 24 2009
   - _OVBed: median, StdDev, Variance
   - fixed bugs resulting from the above
   - made quite a lot of the methods of Vectors private
   - trying to make the pods more consistent and informative
   - renamed size() as query_size() to be really consistent --
     but put in an undocumented alias named size() ... maybe
     deprecate later.
   - renamed ginsert() append(), but left ginsert() operational,
     with no real chance of deprecation later

1.6600: Tue Jun 23 2009
   - installed a lotta DRY on the two vector classes, will
     continue this tonight and on lunch break most likely.
   - worked on the docs, they need a good deal of work
   - _OVBed Mean
   - noticed a half-way implemented set_vector fill-disabler, why
     isn't it finished?
     - added a query_filled to check to see if a vector is full
     - made sure the _OVB and _TVB base classes know about the
       half implemented fill disabler
     - use query_filled in various places, to make it automagic
       like everything else
     - I gave up on the second argument to set_size... it needs
       to be kinda system wide to work right.  Another $ENV{VAR}.
       *sigh*
   - _OVBed Mode