@@ -1,6 +1,7 @@
 1.6600: Sun Jun 28 2009
    - new test: create each object in its empty state, make sure
      its really empty.
+   - added an importer interface for the %ENV vars
 
 1.6600: Sat Jun 27 2009
    - worked on computed vectors a little.  decided it should be
